# internal/routes/linkRoutes.go
@@ -22,6 +22,7 @@ func (ur *LinkRoutes) Register(r *gin.RouterGroup) {
 	links := r.Group("/links")
 	{
 		links.GET("", ur.handler.GetAllLinks)
+		links.GET("/:id", ur.handler.GetById)
 		links.GET("/link", ur.handler.GetByLink)
 		links.POST("", ur.handler.CreateLink)
 	}
